--- a/css/style.css
+++ b/css/style.css
@@ -10,33 +10,15 @@ h2 {
   color: #333;
 }
 
-.list {
-  width: 70%;
-  margin: 0 auto;
-}
-
 input, .buttons {
   margin-top: 0.5em;
-}
-
-.item-name {
-  display:table-cell;
-  width: 200px;
-  min-width: 200px;
-}
-
-.github-image {
-  width: 70%;
-  margin: 0 auto;
-}
-
-img {
-  margin-top: 30px;
-  width: 10%;
-  height: 10%;
 }
 
 .glyphicon:hover {
   cursor: pointer;
   color: #000;
+}
+
+.navbar {
+  margin-bottom: 5vh;
 }
